--- a/src/pages/ajustes/ajustes.html
+++ b/src/pages/ajustes/ajustes.html
@@ -8,6 +8,16 @@
 
   <ion-navbar  color="secondary">
     <ion-title>ajustes</ion-title>
+
+
+    <!--Se muestra el menu pero a diferencia de hacerlo con el componente no se requiere crear una funcion con el evento (click)-->
+    <ion-buttons>
+      <button ion-button icon-only [menuToggle]>
+        <ion-icon name="menu">  </ion-icon>
+      </button>
+
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
