--- a/src/pages/principal/principal.html
+++ b/src/pages/principal/principal.html
@@ -8,6 +8,13 @@
 
   <ion-navbar color="secondary">
     <ion-title>Principal Root</ion-title>
+    <!--Se muestra el menu -->
+    <ion-buttons>
+      <button ion-button icon-only (click)="mostrarMenu()">
+        <ion-icon name="menu">  </ion-icon>
+      </button>
+
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
