--- a/src/pages/ajustes2/ajustes2.html
+++ b/src/pages/ajustes2/ajustes2.html
@@ -6,8 +6,16 @@
 -->
 <ion-header>
 
+  <!--La propiedad Toggle permite mantener el control sobre el menu, esta propiedad no requiere ningun evento ni funcion para ser efectiva-->
+
   <ion-navbar>
     <ion-title>ajustes2</ion-title>
+    <ion-buttons>
+      <button ion-button icon-only [menuToggle]>
+        <ion-icon name="menu">  </ion-icon>
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
