--- a/src/pages/ajustes/ajustes.html
+++ b/src/pages/ajustes/ajustes.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar  color="secondary">
-    <ion-title>ajustes</ion-title>
+    <ion-title>Ajustes</ion-title>
 
 
     <!--Se muestra el menu pero a diferencia de hacerlo con el componente no se requiere crear una funcion con el evento (click)-->
