--- a/src/pages/ajustes2/ajustes2.html
+++ b/src/pages/ajustes2/ajustes2.html
@@ -8,8 +8,8 @@
 
   <!--La propiedad Toggle permite mantener el control sobre el menu, esta propiedad no requiere ningun evento ni funcion para ser efectiva-->
 
-  <ion-navbar>
-    <ion-title>ajustes2</ion-title>
+  <ion-navbar color="azul">
+    <ion-title text-center>Otros ajustes</ion-title>
     <ion-buttons>
       <button ion-button icon-only [menuToggle]>
         <ion-icon name="menu">  </ion-icon>
@@ -22,5 +22,7 @@
 
 
 <ion-content padding>
+
+  <h1 text-lg-center>Auf Wiedersehen</h1>
 
 </ion-content>
